<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  -->

    <!--  -->

    <!--  -->

    <!--  -->
    <string name="app_name">Kupa AV</string>
    <string name="videoname">KUPA影视</string>

    <string name="view1">Erhai lake is one of the four sceneries of "fenghua snow moon".It is said to be shaped like an ear and named "erhai lake".Erhai lake has excellent water quality and abundant aquatic resources. It is also a scenic scenic spot.The erhai lake, though called the sea, is actually a lake. It is said that because of the deep interior of yunnan province, the bai people are the yearning for the sea, so it is called erhai lake.</string>
    <string name="view2">Due to the development of the red soil in dongchuan, yunnan, the soil is rich in iron and aluminum, with little organic matter, strong acidity and sticky soil.The surrounding area is the most concentrated, typical and characteristic red land of yunnan red earth plateau.Lined with blue sky, white clouds and the vagaries of light, the landscape is a spectacular landscape.</string>
    <string name="view3">Old town of lijiang, also known as dayan town is located in the middle of lijiang dam, it is China\'s famous historical and cultural city in the only ancient city without walls, reportedly because lijiang hereditary rulers surname wood, as wood word box fortification is bound to become "trapped" word.Because the essence of the naxi culture and intact since song and yuan formation of the historical style and features, has been listed as the national famous historical and cultural city of the state council, a UNESCO world heritage site.</string>
    <string name="view4">Lugu lake is an attractive pearl on the southwest plateau of China. Mosuo called it "xie nano", meaning "mother lake" and mother lake.This is the ancient mysterious "women's country" of the east, conquering the winners from all over the world.</string>
    <string name="view5">Meili snow mountain is a large group of snow-capped mountains in the western part of deqin county in diqing Tibetan autonomous prefecture, with a total length of 150 kilometers.The highest peak is 6,740 meters above sea level. It is the highest mountain in yunnan province, 10 kilometers northeast of deqin county, 184 kilometers from zhongdian county.</string>
    <string name="view6">The scenery of lijiang, yulong snow mountain since ancient times is a magnificent snow-capped mountains, the tang dynasty nanzhao kingdom seeks for age, nanzhao state under different seeks to find yue worship the mountain, yulong snow mountain, has a gift for beiyue, baisha village north north since YueMiao remaining, still deep courtyard, cracking cliff face.Worshippers are on the road.
"The main product must stand the highest quality, climbing the highest mountain top", visit lijiang, yulong snow mountain is a must choose project.</string>

    <string name="food_1">Sour cake, yunnan specialty.Tamarind cake selection of yunnan tropical rainforest Jane - acid Angle as the main raw material, adopting special protect fragrance color technology processing, keep the tamarind fruit flavors, sweet and sour and refreshing, delicious, the real green health, without any additives, preservatives and pigment.Tamarind fruit cake, pure taste and Zimbabwe, for young and old, meet the modern pursuit of health food, study the characteristics of the young and the four seasons all appropriate, known as "juice" can eat chewing.In yunnan, the more common acid - goo pie.</string>
    <string name="food_2">Yunnan dai bamboo rice is could meters of bamboo is sweet, sweet to be in harmony an organic whole, is the most delicate flavor, national characteristics of flavor food.It is a typical dish of yunnan ethnic cuisine, which is mainly popular in xishuangbanna, dehong prefecture, pu \'er region, lincang region and so on.</string>
    <string name="food_3">Poached meat is spicy, tender and chewy.The meat is fresh and tender, the soup is red, spicy and spicy, the most suitable rice, is one of the domestic food.The characteristic is "hemp, hot, fresh, fragrant".</string>
    <string name="food_4">In the qianlong period of the qing dynasty, the chicken pot was spread among the people of southern yunnan province.Jianshui county is rich in pottery, and there is a unique clay pot, called a boiler.
The cooking chicken is unique, the chicken is tender, the soup is fresh and sweet, is a beautiful name, the more and more the yunnan famous food, deeply praised by the Chinese and foreign diners.</string>
    <string name="food_5">Pineapple and purple rice are the glutinous-food products with dai nationality.Production, the first to put the purple glutinous rice soaked in water for seven to eight hours, then wash clean, and finely chopped pork stir well, put the prepared pineapple on the top with a knife cut into a cover, and then pay to pineapple heart, into a purple glutinous rice, then cut off the cover, into the steamer pot steamed, when send out an inviting fragrance, serve immediately.Its taste is sweet and delicious, and has the effect of blood moisten the lung.</string>
    <string name="food_6">Glutinous rice bowel originated in yanyuan lugu lake, is said to have lived there, the Japanese will half cooked rice, after kill pig blood, such as salt, lard, Chinese prickly ash, spiced mixture into the pig intestine or small intestine, roll into a circle and then cooked, to family and relatives.</string>
    <string name="food_7">When it comes to yunnan cuisine, one has to mention the famous yunnan food - crossing the bridge rice line.Tourists who come to yunnan will not forget to taste the bridge rice noodles.The bridge rice noodles are mainly made of soup, meat and rice.The soup is made of fat chicken, pork barrel bone and so on to make clear and bright for good, eat, with big "sea bowl" sheng tang, add MSG, hu beans, cooked chicken oil.The soup is thick and does not take a hint of heat.In addition to the most famous bridge rice line, there are many ways to eat rice noodles. If you have the chance, try it.</string>
    <string name="food_8">Pea flour is a traditional han snack in kunming.It is a very favorite food product of yunnan people.It is made of dried pea granule, which is ground to the skin. After the blister, it is mixed with water to make the paste. After filtering and boiling, it is formed into a paste.The texture is delicate and tender, the color turmeric, the flavor has the special aroma of the pea, the cooking can be hot or cold after the shaping of the knife.</string>
    <string name="food_9">The biggest feature of shenzhen caged rice is the heavy lotus leaf aroma, which is because the lotus leaves tightly wrap the food long time to steam, of course not only.The taste of lotus leaf caged rice is very similar to soup rice. It is fragrant, and it has a strong flavor. It has the varieties of mushroom, chicken, spicy, bittersweet and paella.Soup rice has a thick crust, and it is fun to dig with a spoon. The lotus leaves are not so troublesome, and the lotus leaves are fragrant with the aroma of the lotus leaves.Inspired by the traditional food glutinous rice chicken in guangdong province.</string>
    <string name="food_10">Hakka poon choi well-known quartet, many large restaurants, cafes all love shenzhen poon choi was introduced in the winter, but most of the poon choi with modified, adding many rare dishes, such as: prawns, scallop, yuan bei, etc., but authentic hakka poon choi, devoid of these valuable materials in the sea, because the hakka people usually live in the mountains, so most of the material is given priority to with vegetables and meat.Initial poon choi is in the mountains of hakka people, New Year\'s day is a holiday, each with their own food gathered, but rough, food has cooled when getting together, turn on hot poured all the food in a large pan boiling hot, became the prototype of the poon choi, hakka red and white two things now, Chinese New Year celebration will posed poon choi dinner in your round.</string>
    <string name="food_11">Guangdong early tea is a kind of lingnan folk food custom.Guangdong people drink early tea, some as breakfast, usually the whole family is sitting around a table, sharing the joys of family.Some take morning tea to go to work, others to take the slack.Most of the leisure people are retired people in the neighborhood. They usually come first, leaving at the earliest. When they open the door, they can always sit in the morning tea.This kind of tea does not go to luxurious wine house, high-grade tea house or guesthouse, but arrive nearby street economy affordable small tea house.If you go to a fancy tea house, the consumption per person can be about the same as a banquet."Morning tea" is also a popular way of socializing in guangdong.</string>
    <string name="food_12">Pork belly bun chicken, also known as pork belly, chicken pot, phoenix.It is a traditional local dish in guangdong province, which belongs to the department of cantonese cuisine.Popular in guangdong, huizhou, heyuan, meizhou and other guangdong.Guangdong hakka regional banquet in the soup, soup with clear, strong medicinal herbs and pepper aroma.</string>
    <string name="food_13">The yu-lily shrimp ball is a traditional dish in guangdong province, which belongs to the department of cantonese cuisine.The asparagus only takes the top part because it looks like a hairpin.</string>
    <string name="no_weather_information">No weather information</string>
    <string name="wel_date">2017 / 6 / 6</string>
    <string name="tuesday">Tuesday</string>
    <string name="wel_hello">Dear XXX customers:</string>
    <string name="wel_hotel_name">Welcome to XX hotel in kunming city</string>
    <string name="wel_hotel_content">　　We will use the perfect service to make you feel warm and considerate, may our enthusiasm, offer you a nice comfortable and unforgettable living experience.</string>
    <string name="signature_manager">Signature of manager:</string>
    <string name="wel_enter">Enter</string>
    <string name="wel_enter_tip">Press “OK” to enter</string>
    <string name="hands_on_demand">Hands on demand</string>
    <string name="hotel_server">Hotel Server</string>

</resources>