<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wel_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="@dimen/h_26" />

        <Space
            android:layout_width="@dimen/w_18"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_weather_information"
            android:textColor="#333333"
            android:textSize="@dimen/h_26" />

        <!--<Space-->
            <!--android:layout_width="@dimen/w_18"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<TextView-->
            <!--android:id="@+id/wel_temperature"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="7 ℃ - 18 ℃"-->
            <!--android:textColor="#333333"-->
            <!--android:textSize="@dimen/h_26" />-->

        <Space
            android:layout_width="@dimen/w_32"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:textColor="#333333"
            android:textSize="@dimen/h_26" />

        <Space
            android:layout_width="@dimen/w_32"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wel_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel_date"
            android:textColor="#333333"
            android:textSize="@dimen/h_26" />

        <Space
            android:layout_width="@dimen/w_12"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16:42"
            android:textColor="#333333"
            android:textSize="@dimen/h_26" />

        <Space
            android:layout_width="@dimen/w_32"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wel_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textColor="#333333"
            android:textSize="@dimen/h_26" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/w_144"
        android:layout_height="@dimen/h_44"
        android:src="@mipmap/hotel_black_logo" />

</FrameLayout>